--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-html,
+/* html,
 body {
   margin: 0;
   padding: 0;
@@ -16,10 +16,82 @@ h1 {
   box-shadow: 10px 10px 15px black;
 } */
 
-body {
+/* body {
   display: flex;
   justify-content: center;
   overflow: hidden;
   height: 100vh;
   background: linear-gradient(0deg, rgb(26, 3, 36) 0%, rgb(178, 175, 180) 100%);
+} */
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+canvas {
+  display: block;
+}
+/* Estilo general */
+body {
+  margin: 0;
+  font-family: "Courier New", Courier, monospace;
+  background-color: #634551;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+h1 {
+  font-family: "Courier New", Courier, monospace;
+  color: antiquewhite;
+  font-size: 40px;
+}
+
+h2 {
+  font-family: "Courier New", Courier, monospace;
+  color: antiquewhite;
+}
+
+body,
+p {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  color: rgb(235, 235, 235);
+}
+strong {
+  font-size: medium;
+}
+
+/* Pantalla de inicio */
+#start-screen {
+  text-align: center;
+  padding: 100px;
+  max-width: 650px;
+  background-color: rgba(0, 0, 0, 0.8);
+  border: 2px solid #262726;
+  border-radius: 10px;
+}
+
+#start-button {
+  padding: 10px 20px;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 16px;
+
+  cursor: pointer;
+  background-color: #580b35;
+  color: #ffffff;
+  border: none;
+  border-radius: 5px;
+}
+
+#start-button:hover {
+  background-color: #7c2626;
+}
+
+/* Lienzo del juego */
+#game-canvas {
+  display: none; /* Ocultamos el canvas hasta que el juego inicie */
+  border: 2px solid #634551;
 }
