--- a/style.css
+++ b/style.css
@@ -87,37 +87,6 @@ canvas {
 }
 
 /* Estilos para la pantalla de victoria */
-/* #victory-screen {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  background-color: rgba(0, 0, 0, 0.8);
-  color: white;
-  padding: 20px;
-}
-
-#victory-screen h1 {
-  font-size: 36px;
-  margin-bottom: 20px;
-}
-
-#victory-screen p {
-  font-size: 20px;
-  margin-bottom: 20px;
-}
-
-#restart-button {
-  font-family: "Courier New", Courier, monospace;
-  font-size: 20px;
-  padding: 10px 20px;
-  cursor: pointer;
-  background-color: #a57777;
-  border: none;
-  border-radius: 10px;
-} */
-
 #victory-screen {
   position: fixed; /* Asegura que esté sobre el juego */
   top: 50%; /* Centrado verticalmente */
@@ -158,4 +127,38 @@ canvas {
 
 #victory-screen button:hover {
   background-color: #55335a;
+}
+
+/* Estilos para la pantalla de derrota */
+#defeat-screen {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  z-index: 1000;
+}
+
+#defeat-screen .message {
+  font-size: 1.5em;
+  margin-bottom: 20px;
+}
+
+#defeat-screen button {
+  background-color: #ff4d4d;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 1em;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+#defeat-screen button:hover {
+  background-color: #ff1a1a;
 }
