--- a/style.css
+++ b/style.css
@@ -131,12 +131,15 @@ canvas {
 
 /* Estilos para la pantalla de derrota */
 #defeat-screen {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+
   display: none;
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0);
+  box-shadow: 0 4px 8px rgba(194, 191, 191, 0.5);
   color: white;
   padding: 20px;
   border-radius: 10px;
@@ -150,7 +153,9 @@ canvas {
 }
 
 #defeat-screen button {
-  background-color: #ff4d4d;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 18px;
+  background-color: #7e2d2d;
   color: white;
   border: none;
   padding: 10px 20px;
@@ -160,5 +165,5 @@ canvas {
 }
 
 #defeat-screen button:hover {
-  background-color: #ff1a1a;
+  background-color: #55335a;
 }
