--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
 canvas {
   display: block;
 }
+
 /* Estilo general */
 body {
   margin: 0;
@@ -33,6 +34,8 @@ body,
 p {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   color: rgb(235, 235, 235);
+  font-size: 1em;
+  text-align: left;
 }
 strong {
   font-size: medium;
@@ -41,10 +44,10 @@ strong {
 /* Pantalla de inicio */
 #start-screen {
   text-align: center;
-  padding: 80px;
-  max-width: 650px;
+  padding: 50px;
+  max-width: 700px;
   background-color: rgba(0, 0, 0, 0.8);
-  border: 2px solid #262726;
+  border: 0px;
   border-radius: 10px;
 }
 
@@ -66,41 +69,38 @@ strong {
 
 /* Lienzo del juego */
 #game-canvas {
-  display: none; /* Ocultamos el canvas hasta que el juego inicie */
+  display: none;
   border: 2px solid #634551;
 }
 
 /* canvas del juego */
 body {
-  margin: 0; /* Elimina el margen por defecto */
-  display: flex; /* Habilita el sistema de flexbox */
-  justify-content: center; /* Centra horizontalmente */
-  align-items: center; /* Centra verticalmente */
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 100vh; /* La altura de la pantalla completa */
-  background-color: black; /* Opcional: fondo del juego */
-  /* overflow: hidden; Evita scroll si es necesario */
+  background-color: black;
 }
 
 canvas {
-  border: 2px solid white; /* Opcional: agrega un borde */
-  box-shadow: 0 0 10px rgba(255, 255, 255, 0.5); /* Opcional: efecto de brillo */
+  border: 2px solid white;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.5); /*efecto de brillo */
 }
 
 /* Estilos para la pantalla de victoria */
 #victory-screen {
   position: fixed; /* Asegura que esté sobre el juego */
-  top: 50%; /* Centrado verticalmente */
-  left: 50%; /* Centrado horizontalmente */
-  transform: translate(-50%, -50%); /* Ajuste para centrar */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 400px; /* Ancho del popup */
   padding: 60px;
-
-  background-color: rgb(8, 8, 8); /* Fondo blanco con algo de transparencia */
-
-  border-radius: 10px; /* Bordes redondeados */
-  text-align: center; /* Centrado del texto */
-  box-shadow: 0 4px 8px rgba(194, 191, 191, 0.5); /* Sombra para dar efecto de popup */
-  display: none; /* Inicialmente oculto */
+  background-color: rgb(8, 8, 8);
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 0 4px 8px rgba(194, 191, 191, 0.5);
+  display: none;
   z-index: 1000; /* Asegura que se muestre sobre otros elementos */
 }
 
@@ -121,7 +121,7 @@ canvas {
   border-radius: 5px;
   cursor: pointer;
   font-family: "Courier New", Courier, monospace;
-  font-size: 18px;
+  font-size: 1.1em;
   background-color: #8f4848;
   border: none;
 }
@@ -133,7 +133,6 @@ canvas {
 /* Estilos para la pantalla de derrota */
 #defeat-screen {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-
   display: none;
   position: fixed;
   top: 50%;
@@ -160,7 +159,7 @@ canvas {
   color: white;
   border: none;
   padding: 10px 20px;
-  font-size: 1em;
+  font-size: 1.1em;
   border-radius: 5px;
   cursor: pointer;
 }
